# graph-log-sketch

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  CMakeLists.txt  CPPLINT.cfg  Dockerfile.dev  LICENSE.txt  Makefile  README.md  README_TACC.md  blah.txt  sonar-project.properties
.github/workflows/: build-and-test.yml  (+1 more)
betweennesscentrality/: CMakeLists.txt  bc_mr.cpp  mrbc_bitset.hh  mrbc_sync.hh  mrbc_tree.h
bfs/: CMakeLists.txt  bfs.cpp  bfs_pull_sync.hh  importer.cpp  main.cpp
cc/: CMakeLists.txt  cc.cpp  cc_push_sync.hh
cmake/: GaloisCompilerOptions.cmake  GaloisTesting.cmake
dist-exps/: perhost_partitioning_csv.py  total_e2e_csv.py
doc/: PANDO-runtime-storage-12-14-22-pre-final-draft.pptx
docker/: Dockerfile  Makefile  build.sh  prep.sh
graphs/: citeseer.el  cora.el  data.0000001.csv  data.01_00_00.csv  data.01_00_00_vertices.csv  data.01_00_01.csv  data.01_00_01_vertices.csv  data.01_00_02.csv  data.01_00_02_vertices.csv  data.01_00_03.csv  data.01_00_03_vertices.csv  data.01_00_04.csv  data.01_00_04_vertices.csv  data.01_00_05.csv  data.01_00_05_vertices.csv  data.01_00_06.csv  data.01_00_06_vertices.csv  data.01_00_07.csv  data.01_00_07_vertices.csv  data.01_00_08.csv  data.01_00_08_vertices.csv  data.01_00_09.csv  data.01_00_09_vertices.csv  data.01_00_10.csv  data.01_00_10_vertices.csv  data.01_00_11.csv  data.01_00_11_vertices.csv  data.01_00_12.csv  data.01_00_12_vertices.csv  data.01_00_13.csv  data.01_00_13_vertices.csv  data.01_00_14.csv  data.01_00_14_vertices.csv  data.01_00_15.csv  data.01_00_15_vertices.csv  data.01_00_16.csv  data.01_00_16_vertices.csv  data.01_00_17.csv  data.01_00_17_vertices.csv  data.01_00_18.csv  (+166 more)
include/: CMakeLists.txt  algo.hpp  benchmark.hpp  counter.hpp  counters.hpp  graph-append-log.hpp  graph-log.hpp  graph-mutable-va.hpp  graph.hpp  graph_benchmark_style.hpp  importer.cpp  importer.hpp  read_file_bench.hpp  test_bench.hpp
include/scea/: perf.hpp  stats.hpp
include/scea/algo/: algo_interface.hpp  bc.hpp  bfs.hpp  nop.hpp  pr.hpp  tc.hpp  utils.hpp
include/scea/graph/: adj.hpp  csr.hpp  lccsr.hpp  lscsr.hpp  morph.hpp  mutable_graph_interface.hpp
include/scea/schema/: schema.h
lonestar6_scripts/: sbatch_gen_rand_large.bash  tacc_env.sh
microbench/: CMakeLists.txt  counter.hpp  edit_scalability.cpp  edit_scalability_large.cpp  gen_rand_bfs.cpp  gen_rand_large.cpp  gen_rand_tricount.cpp  jaccard.cpp  jaccard.hpp
pagerank/: CMakeLists.txt  pagerank.cpp  pagerank_push_sync.hh
scripts/: CMakeLists.txt  analyze_input.py  bad_graph.py  batch_count.py  boost_machine.sh  count_batched.cpp  count_edges.py  create_batches_for_multiple_hosts.py  divide_into_batches.cpp  divide_into_batches.py  edit_scalability.sh  generate_plots.py  generate_profile_stats.py  graph.py  graph_prep.zsh  input_structuring.py  jaccard.ipynb  morph_graph.py  plot_memory_usage.py  prep.sh  prep_machine.sh  process-to-csv.sh  process.awk  process.sh  script.py  shufbel.cpp  tacc_edit_scalability.sh  tacc_edit_scalability_friendster.sh  tacc_edit_scalability_grid.sh  tacc_edit_scalability_rmat18.sh  tacc_env.sh  tacc_to_csv.py  unprep.sh  unprep_machine.sh
scripts/convert/: go.mod  graph_convert  graph_convert.go
scripts/dist-exps/: perhost_partitioning_csv.py  ppolicy_plot.R  test_plot.sh  total_e2e_csv.py  totale2e_plot.R
scripts/dist-exps/e2e_bfs-pull_test/adj/1/: bfs-pull-0_0.out  bfs-pull-0_1.out  total_e2e.out
scripts/dist-exps/e2e_bfs-pull_test/adj/4/: total_e2e.out
scripts/dist-exps/e2e_bfs-pull_test/lccsr/1/: bfs-pull-0_2.out  total_e2e.out
scripts/dist-exps/e2e_bfs-pull_test/lccsr/4/: total_e2e.out
scripts/dist-exps/e2e_bfs-pull_test/lscsr/4/: total_e2e.out
scripts/dist-exps/ls6_graphtype_test_scripts/: batch_ls6_all.sh  run_ls6.sbatch  run_ls6.template.sbatch  run_ls6_all.sh
scripts/dist-exps/ls6_ppolicy_test_scripts/: batch_ls6_all.sh  run_ls6.sbatch  run_ls6.template.sbatch  run_ls6_all.sh
scripts/dist-exps/ls6_scripts/: batch_ls6_all.sh  run_ls6.template.sbatch  run_ls6_all.sh
scripts/dist-exps/ppolicy_bfs-pull_test/cvc/2/: 0.out  1.out
scripts/dist-exps/ppolicy_bfs-pull_test/cvc/4/: 0.out  2.out
scripts/dist-exps/ppolicy_bfs-pull_test/divija/1/: 0.out
scripts/dist-exps/ppolicy_bfs-pull_test/divija/2/: 0.out  1.out
scripts/dist-exps/ppolicy_bfs-pull_test/divija/4/: 0.out  1.out  2.out  3.out
scripts/dist-exps/ppolicy_bfs-pull_test/oec/2/: 0.out  1.out
scripts/dist-exps/ppolicy_bfs-pull_test/oec/4/: 0.out  2.out
scripts/graphscope/: rmat.py  run.py  split_edgelist.py  tacc_graphscope.sh
scripts/krongen/: input_gen  input_gen.go
scripts/rmatgen/: go.mod  go.sum
scripts/shufbel/: go.mod  go.sum  shufbel.go
scripts/wf4/: extract.py  extract_k4.py  run.sh  run_all.sh
scripts/wf4/generate/: commercial.py  cyber.py  extract_nodes.py  generate.sh  generate_all.sh  social.py  uses.py
scripts/wf4/tacc/: tacc_dataset.sh  tacc_dataset_all.sh  tacc_env.sh
test/: CMakeLists.txt  bfs-tests.cpp  bfs.cpp  dijkstra.cpp  ego_graph.cpp  file_tests.cpp  galois.cpp  galois_bfs.cpp  galois_gen_bfs.cpp  galois_jaccard.cpp  galois_jaccard.h  graph_build.cpp  jaccard.cpp  p_small_tests.cpp  small_tests.cpp  test-algo-bc.cpp  test-algo-bfs.cpp  test-algo-tc.cpp  test_driver.cpp
test/wf4/: CMakeLists.txt  test_import.cpp  test_influence_maximization.cpp  test_influencer.cpp  test_quiesce.cpp
wf1/: CMakeLists.txt  csr.cpp  embeddding.cpp  embedding.cpp  gnngalois.h  main.cpp  readFiles.cpp
wf2/: CMakeLists.txt
wf2/include/: .graph_ds.hpp.swp  graph_ds.hpp  import.hpp  pattern.hpp
wf2/src/: .main.cpp.swp  edit_scalability_main.cpp  import.cpp  main.cpp  pattern.cpp
wf3/: CMakeLists.txt
wf3/include/: fasta.hpp  pakman.hpp  util.hpp
wf3/src/: fasta.cpp  main.cpp  pakman.cpp  util.cpp
wf4/: CMakeLists.txt
wf4/include/: full_graph.hpp  graph.hpp  influencer.hpp
wf4/include/wf4/: full_graph.hpp  graph.hpp  import.hpp  quiesce.hpp
wf4/src/: import.cpp  influence_maximization.cpp  influencer.cpp  main.cpp  quiesce.cpp
(+17 files in other folders)
